tests/NormalTests/paczka1/small_fuzzy/80537829.err
Error in line 1: dFK S134 51,1
Error in line 2: dFK S837 75,9
Error in line 3: dFK S916 85,5
Error in line 6: QNBXRmAi8an S290 90,4
Error in line 16: z0b89k0V S134 58,89
